# ls_extended

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.al  build.sh  ccp4m.yaml
include/: cmdopts.h  colors.h  core.h  dircolors.h  help.h  icons.h  ls.h  strvec.h
platform_build_scripts/rpm/: CMakeLists.txt
src/: cmdopts.c  cmdopts.h  color.c  color.h  colors.c  core.c  core.h  dircolors.c  disp_basic.c  disp_basic.h  disp_long.c  disp_long.h  help.c  help.h  icons.c  icons.h  ls.c  ls.h  main.c  sorts.c  sorts.h  strvec.c  vec.c  vec.h
tests/: colored_display_colors.c  colored_display_invalid_colors.c  colored_display_padding.c  colored_display_variadic_params.c  strvec_all.c  strvec_delete.c  strvec_get.c  strvec_insert.c
